<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:text="@+string/fileNameField">
        <requestFocus />
    </EditText>
    
        <Button android:id="@+id/startTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startTest"/>
        
        <TextView android:id="@+id/outputView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars = "vertical"
            android:text="@string/outputView2"/>
        
        <Button android:id="@+id/showResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showResult"/>

</LinearLayout>