<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/checkResponseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="@string/checkResponseTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
    <ImageView
        android:id="@+id/checkResponseImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:src="@drawable/people" />
    
    <ImageView
        android:id="@+id/checkResponseResultImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:src="@drawable/wait" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:text="@string/checkResponseText" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20" >

        <Button
            android:id="@+id/checkResponseRejectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/checkResponseRejectButton" />

        <Button
            android:id="@+id/checkResponseAcceptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/checkResponseAcceptButton" />

    </LinearLayout>

</LinearLayout>